Add audit log support
