# internal/app/web/router.go
@@ -48,6 +48,9 @@ func SetupRouter() *gin.Engine {
 		v1.GET("/iec61850/node/:id", service.GetNodeByID)
 		v1.GET("/iec61850/node/ref/:ref", service.GetNodeByRef)
 		v1.PUT("/iec61850/node/:id/data_source", service.UpdateNodeDataSource)
+
+		v1.GET("/audit_log/:log_id", service.GetAuditLogByID)
+		v1.GET("/audit_log", service.GetAllAuditLogs)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
